syntax = "proto3";
package oauth;
import "google/protobuf/any.proto";
import "utils/any/any.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option java_package = "xyz.hoper.protobuf.oauth";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.populate_all) = true;

message OauthReq{
    string responseType =1;
    string clientID =2;
    string scope =3;
    string redirectURI =4;
    string state =5;
    string userID =6;
    int64 accessTokenExp =7;
    string clientSecret =11;
    string code =12;
    string refreshToken =13;
    string grantType = 14;
    string accessType = 15;
    string username =8;
    string password =9;
    string verifyCode =10;
}

message Client{
    option (gogoproto.goproto_getters) = true;
    string ID = 1;
    string secret = 2;
    string domain = 3;
    string userID = 4;
}